add site secription for 3d project

--- a/webpage/1_study_system.Rmd
+++ b/webpage/1_study_system.Rmd
@@ -4,39 +4,81 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # The study system
 
-## Alpine grasslands in Norway
+## Alpine ecosystems in Western Norway
 
+The PFTC6 will be held in Aurland in the fjords of Western Norway.
 
+```{r map-aurland, out.width='100%', fig.cap= "The fjords in Aurland in Western Norway."}
 
-```{r grasslands, out.width='100%', fig.cap= "An alpine grasslands in Norway"}
+knitr::include_graphics('images/sites/aurland.jpg')
+```
 
-knitr::include_graphics('images/alpine_grassland.jpg')
+Typical alpine grasslands in this area look like this:
+
+```{r grasslands, out.width="49%", out.height="20%", fig.show='hold',fig.align='center', fig.cap= "A typical alpine grasslands and one at lower elevation."}
+
+knitr::include_graphics(c('images/sites/alpine_grassland.jpg', 'images/sites/alpine2.jpg'))
 ```
 
 
 
 ## Three-D project - Global change impacts on biodiversity and ecosystem carbon fluxes
 
-### Research site
+For a complete description of the experiment see [here](https://github.com/audhalbritter/Three-D).
+
+### Study sites
 
 The study is conducted in three semi-natural grassland sites in western Norway.
-The sites are location on calcareous soil (loamy sand) in Norway.
+The sites are location on calcareous soil (loamy sand).
 The sites were chosen to fit within an elevational gradient with three temperature levels that differ in c. 400 m elevation, a temperature difference of approximately 3°C in summer temperature.
-The sites correspond to boreal, sub-alpine and alpine biogeographic zones in Norway. Other factors such as history, bedrock, vegetation type and structure, slope and exposure were kept as constant as possible among the selected sites within each country.
-
-The sites are grazed by sheep and goats.
+The sites correspond to boreal, sub-alpine and alpine biogeographic zones. 
+Other factors such as history, bedrock, vegetation type and structure, slope and exposure were kept as constant as possible among the selected sites within each country. The sites are grazed by sheep and goats.
 
 ```{r exp-design, out.width='100%', fig.cap= "A) The experiment are set up along an elevational gradient that represents a productivity gradient. The experimental treatments are warming (brown), a grdient of nitrogen addition (grey to green) and their combination. These treatments are crossed with four grazing treatment: control (no clipping), intermediate and intensive clipping, and natural grazing outside the grazing exclosure. B) Example of a plot divided into non destructive (inner square) and and destructive sampling area (outer square)."}
 
-knitr::include_graphics('images/ExperimentalDesign.jpg')
+knitr::include_graphics('images/sites/ExperimentalDesign.jpg')
 ```
 
-We chose species rich grasslands, that were large enough to contain 80 50 x 50 cm plots and relatively flat to avoid contamination between the different nitrogen treatments and for convenience when measuring carbon fluxes.
-A second criteria, was to have a high enough elevational gradient, to get an equal distance of c. 400 m difference in elevation between each of the sites.
-The sites also needed to be relatively easy to access, because large vegetation turfs were transplanted.
-Finally, we wanted other environmental factors to be as similar as possible among the sites, within each of the countries (i.e. grazing regime and history, bedrock, vegetation type and structure, slope and exposure).
+The lowest site **Vikesland** is locate at 469 m a.s.l. (60.9°N,	7.2°E). 
+It is located near a farm, with 200 goats. In summer, these goats are moving up and down the mountains each day, to graze at higher elevation and being milked at the farm in the valley.
+The vegetation is dominated by _Agrostis capillaris_, _Anthoxantum odoratum_, _Achillea millefolium_, _Ranunculus acris_, and _Rumex acetosa_.
+
+
+```{r vikeland, out.width='100%', fig.cap= "The lowest site at the farm Vikesland."}
+
+knitr::include_graphics('images/sites/Vikesland.png')
+```
+
+
+The middle site **Joasete** is a summer farm and located at 920 m a.s.l.
+The area around the summer farm is mostly grazed by sheep and sometimes goats.
+The vegetation at Joasete is well adapted to the grazing pressure and nutrient input by the animals.
+The dominant plant species are _Agrostis capillaris_, _Deschampsia cespitosa_, _Achillea millefolium_, _Ranunculus acris_, _Ranunculus repens_, and _Rumex acetosa_.
+
+```{r joasete, out.width='100%', fig.cap= "The middle site at the summer farm Joasete"}
+
+knitr::include_graphics('images/sites/Joasete.jpg')
+```
+
+
+The highest site **Liahovden** is located at 1290 m a.s.l.
+It is grazing moderately by sheep, deer and reindeer.
+The vegetation is a species rich grassland, typical for nutrient soils in Norwegian alpine vegetation with _Achillea millefolium_, _Antennaria dioica_, _Bistorta vivipara_, _Leontodon autumnalis_, _Silene acaulis_, and _Thalictrum alpinum_.
+
+
+```{r liadhovden, out.width='100%', fig.cap= "The higsest site at Liahovden."}
+
+knitr::include_graphics('images/sites/Liahovden.jpg')
+```
+
 
 ### Experimental treatments
+
+At each site, ten blocks, with 8 plots were marked in each corner. Six plots were chosen relatively close to each other (inside the fence) and two plots were chosen further away (outside fence).
+Each plot was given a unique originPlotID starting at the upper left corner in block 1 and the highest site. The numbering was continued to 160. After transplanting, each turf also received a unique destinationPlotID (a number from 1-200; see below).
+Each plot received a combination of each treatment randomly (warming, nitrogen addition and grazing, see below). The randomization of the treatments was done in two steps. First, the 10 nitrogen levels were assigned randomly per block (i.e. block 1 received the same nitrogen level in each site). We chose to randomize the nitrogen treatment at the block level to avoid nitrogen contamination between the plots within the blocks.
+Second, the warming and grazing treatments were randomized within block. The six plots within each block (inside the fence) were randomly assigned a warming and grazing treatment. The two plots per block located outside the fence, were randomly assigned a warming treatment.
+
 
 **Warming treatment**
 
@@ -46,10 +88,20 @@ We used a knife to cut the turfs to 50 x 50 cm and to a depth of c. 10 - 25 cm, 
 After excavation, the turfs were packed into a cardboard box and transported to their respective target sites within one day. The control plots were not excavated or moved. 
 We did not have local transplants, to control for the transplanting effect, because this was tested in a previous project and the transplanting did not affect species composition in Norway [@Vandvik2020-hu] or China [@Yang2018-uq].
 
+```{r transplant, out.width='100%', fig.cap= "A turf that is being transplanted."}
+
+knitr::include_graphics('images/sites/transplant.jpg')
+```
+
 The turfs were fitted into the gaps created by excavating turfs at the destination site, except for the low site, where gaps had to be made. Each block received one plot of each treatment.
 Turfs were placed in the block with the same numerical value (1 - 10) and nitrogen level in the destination site as they originated from in the origin site.
 Transplanted turfs were carefully planted into their destination plots (destinationPlotID) ensuring that the turf orientation was correct (using the toothpick marking the uphill left corner of each turf) and that the soil surface was in plane with the surrounding vegetation, and that the edges of the excavated plot was in good contact with the edges of the gap created when the original turf was excavated from the plot.
 If necessary, loose soil was carefully removed from the underside of the turf, or local soil was added to the gap or around the edges to achieve this.
+
+```{r transplant2, out.width='100%', fig.cap= "Turfs that have been transplanted from Liahovden to lower elevation at Joasete."}
+
+knitr::include_graphics('images/sites/transplant2.jpg')
+```
 
 
 **Nitrogen addition**
@@ -60,12 +112,10 @@ The fertilizer was added once at the start and once in the middle of the growing
 Each block received one of the seven nitrogen levels: 0, 0.5, 1, 5, 10, 50, 100, 150 kg N ha^−1^ yr^−1^.
 Three of the blocks were controls and received 0 kg N ha^−1^ yr^−1^.
 
-The natural nitrogen deposition differs in Norway (1.5-3.5 kg N ha^−1^ yr^−1^) and China (2-4 kg N ha^−1^ yr^−1^).
-The critical load for changing species composition in these alpine grasslands is approximately 5-10 and 15 kg N ha^−1^ yr^−1^ in Norway and China, respectively.
+The natural nitrogen deposition in Norway is 1.5-3.5 kg N ha^−1^ yr^−1^.
+The critical load for changing species composition in these alpine grasslands is approximately 5-10 kg N ha^−1^ yr^−1^ in Norway.
 We therefore wanted to have a range of nitrogen levels that were below and well above this critical load.
-Although the natural annual deposition differs between Norway and China, the Nitrogen addition was kept the same in both countries.
 
-In 2020, the nitrogen treatment was only applied once at Vikesland (lowest site in Norway) due to an accident, however this did not change the amount of nitrogen applied, only the timing.
 
 **Grazing treatment**
 
@@ -74,15 +124,12 @@ Grazing was simulated by clipping the vegetation manually with scissors 2-3 cm a
 The four grazing treatments were natural grazing (N; outside the fence), medium level of grazing (M; 2x clipp), intensive level of grazing (I; 4x clipp), and untreated control plots (C).
 The intermediate clipping level reflects the natural grazing level outside the exclosure and should control for differences between grazing and clipping (i.e. clipping is not selective and will not add faeces and urine).
 The medium and intensive plots were clipped 2 or 4 times during the growing season.
-The clipping treatment was conducted in 2020 - 2021 (2022).
+The clipping treatment was conducted in 2020 - 2022.
 
-The realized cutting in 2020 is shown in the table below.
-In 2020, the intensive grazing level at the higest site in Norway (Liahovden) only received 3 cuts, because the growing season was short due to snow and a cold spring.
-The vegetation did not grow very much at the end of the season and an additional cut would not have removed anymore biomass.
-The intensive grazed plots received 4 cuts (1-4), except Lia (1,2,4), and the intermediate grazed plots received 2 cuts (1,4).
-Cut 3 for Lia does not exist in 2020.
+```{r clipping, out.width='50%', fig.cap= "A plot that has been clipped and the biomass sorted to functional groups."}
 
-In 2021 (and 2022), we did not clip Carex species until the third cut, because they are difficult to identify and often the tips of the leaves are needed for identification.
+knitr::include_graphics('images/sites/clipping.jpg')
+```
 
 
 
