data curation tutorial

--- a/webpage/1_course.Rmd
+++ b/webpage/1_course.Rmd
@@ -48,8 +48,8 @@ There are two options for course credit.
 | May  | Group leaders will schedule 2 sessions to discuss literature and project design and data documentation. | Group leaders |
 | May 5th  | Welcome and introduction to PFTC6; short intro round of all teachers and students; Introduction to trait-based ecology | everybody, Vigdis, Brian |
 | May 12th  | Alpine ecosystems Norway, introduction to ThreeD and Incline project and study sites | Vigdis, Aud |
-| May 19th  | Introduction to intraspecific traits, climate change and traits, Introduction to science communication  | Sonya, Julia and Sehoya |
-| June 2nd  | Introduction to leaf temperature/physiology, remote sensing, and C fluxes  | Sean, Marc and Joseph |
+| May 19th  | Introduction to intraspecific traits, remote sensing, Introduction to science communication  | Sonya, Marc and Sehoya |
+| June 2nd  | Introduction to leaf temperature/physiology, global change and traits, and C fluxes  | Sean, Julia and Joseph |
 | June/July  | tba  | Group leaders |
 
 
